[tool.poetry]
name = "libcyoa"
version = "0.0.1"
description = "Ultimate FastAPI Tutorial"
authors = ["anonekama"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^2.4.2"}
SQLAlchemy = "^2.0.23"
alembic = "^1.12.1"
tenacity = "^8.2.3"
greenlet = "^1.1.2"
jinja2 = "^3.1.2"
httpx = "^0.25.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
cffi = "^1.15.0"
python-jose = "^3.3.0"
pydantic-settings = "^2.0.3"
